- solved toc not showing in mobile - updated cv

--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -161,7 +161,6 @@
 }
 
 .post-content .highlight:not(table) {
-    margin: 10px auto;
     background: var(--code-block-bg) !important;
     border-radius: var(--radius);
     direction: ltr;
